# cmake-from-scratch-vscode

./: CMakeLists.txt  README.md
blinky-lib/: CMakeLists.txt
blinky-lib/include/: blinky.h
blinky-lib/src/: blinky.c
include/blinky-lib/: blinky.h
src/: CMakeLists.txt  main.c
